minor fix to flashing of submenu on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -247,6 +247,10 @@ footer {
         padding: 0 5%;
     }
 
+    .dropdown-items {
+        display: none;
+    }
+    
     #menu-sect.show {
         display: block;
         position: absolute;
